syntax = "proto3";

package proto;

option go_package = "github.com/subash-0044/beaver-vault/proto";

service KeyValueStore {
  rpc Get(GetRequest) returns (GetResponse) {}
  
  rpc Put(PutRequest) returns (PutResponse) {}
  
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  bool found = 1;
  bytes value = 2;
  string error = 3;
}

message PutRequest {
  bytes key = 1;
  bytes value = 2;
}

message PutResponse {
  bool success = 1;
  string error = 2;
}

message DeleteRequest {
  bytes key = 1;
}

message DeleteResponse {
  bool success = 1;
  string error = 2;
} 